fixing search bar on small screens

--- a/client/src/styles/spells.css
+++ b/client/src/styles/spells.css
@@ -96,4 +96,13 @@
   .extra {
     display: block;
   }
+
+  .spells-header {
+    margin-bottom: 5rem;
+  }
+
+  .spells-header .search {
+    top: 8.5rem;
+    width: 60%;
+  }
 }
